<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/menu_item01"
        android:orderInCategory="100"
        android:title="@string/cos_order" />

    <item
        android:id="@+id/menu_item02"
        android:orderInCategory="200"
        android:title="@string/cos_member" />

    <item
        android:id="@+id/menu_item03"
        android:orderInCategory="300"
        android:title="@string/cos_card" />

    <item
        android:id="@+id/menu_item04"
        android:orderInCategory="400"
        android:title="@string/cos_record" />

    <item
        android:id="@+id/menu_item05"
        android:orderInCategory="500"
        android:title="@string/cos_about" />

    <item
        android:id="@+id/menu_item06"
        android:orderInCategory="600"
        android:title="@string/cos_park" />


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="999"
        android:title="@string/action_settings" />

</menu>